# nextleap-voice-agent

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt
api/: index.py
docs/: GOOGLE_MCP_QUICKSTART.md  GOOGLE_MCP_SUMMARY.md  README.md  SOURCE_OF_TRUTH.md  advisor_scheduler_spec.md  architecture.md  conversation_flows.md  google_mcp_setup.md  mcp_contracts.md  phase2_operator_setup.md  test_cases.md
scripts/: setup_google_mcp.py  test_voice_e2e.py
src/advisor_scheduler/: __init__.py  __main__.py  config.py
src/advisor_scheduler/api/: __init__.py  app.py
src/advisor_scheduler/cli/: __init__.py  mcp_list_tools.py
src/advisor_scheduler/core/: __init__.py  engine.py  session.py  topics.py
src/advisor_scheduler/formatters/: __init__.py  voice.py
src/advisor_scheduler/guards/: __init__.py  compliance.py
src/advisor_scheduler/integrations/: __init__.py  deepgram.py  factory.py  protocols.py
src/advisor_scheduler/intents/: __init__.py  router.py
src/advisor_scheduler/llm/: __init__.py  gemini_client.py  prompt_builder.py  response_schema.py  transition_validator.py
src/advisor_scheduler/orchestration/: __init__.py  side_effects.py
src/advisor_scheduler/services/: __init__.py  (+2 more)
tests/: conftest.py  test_api.py  test_booking_service.py  test_config.py  test_deepgram.py  test_engine_transcripts.py  test_google_clients_env_json.py  test_google_sheets_mcp_server.py  test_guards.py  test_intent_router.py  test_mcp_adapters.py  test_orchestration.py  test_slot_service.py  test_topics.py  test_voice_formatter.py
(+10 files in other folders)
